--- a/css/spinner.css
+++ b/css/spinner.css
@@ -1,10 +1,14 @@
 .lds-ripple {
   display: inline-block;
   position: relative;
+  position: absolute;
+  top: 350px;
+  left: 0;
+  right: 0;
   width: 80px;
   height: 80px;
   margin: 50px auto;
-  opacity: 0.1;
+  opacity: 0.5;
   display: none;
 }
 
